fixed typpo on img source

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ padding-top: 20px;
 
     <div class="item">
       <h2 class="sh">RSC RECRUITMENT</h2>
-      <section class="hero-wrap" style="background-image: url(mg/background.jpg);">
+      <section class="hero-wrap" style="background-image: url(img/background.jpg);">
         <div class="container container-full-height">
           <img src="img/recruitment_infographic.png"/>
         </div>
