made sliders more responsive

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ p{
 }
 ul{
   font-family: 'Montserrat', sans-serif!important;
+  font-size: 20px;
 }
 h1 h2 h3 h4 h5 h6 {
  font-family: 'Montserrat', sans-serif!important;
@@ -117,7 +118,26 @@ padding-top: 20px;
 #owl-slider-one-img .owl-wrapper-outer{
   height:629px!important;
 }
+.hero-subtitle {
+  font-size: 12px!important;
+}
+.hero-message{
+vertical-align: 0px!important;
+}
+.hero-message h1{
+ font-size:18px!important;
+ padding-top: 5px!important;
+}
+.hero-message p{
+display: inline!important;
+}
+ul{
+  font-size: 12px!important;
+}
 
+.small-align{
+  vertical-align: middle!important;
+}
  }
 
 </style>
@@ -208,7 +228,7 @@ padding-top: 20px;
         <section class="hero-wrap" style="background-image: url(img/welcome.jpg)">
           <div class="container container-full-height">
             <div class="hero-holder">
-              <div class="hero-message">
+              <div class="hero-message small-align">
                 <h1>We Are RSC</h1>
                 <h2 class="hero-subtitle hidden-xs">RCS have all the tools you need to enable a fast and direct platform to better build your business.
 </h2>
@@ -226,7 +246,7 @@ padding-top: 20px;
         <section class="hero-wrap" style="background-image: url(img/welcome_2.jpg)">
           <div class="container container-full-height">
             <div class="hero-holder">
-              <div class="hero-message">
+              <div class="hero-message small-align">
                 <h1>EXPERTS IN BUSINESS</h1>
                 <h2 class="hero-subtitle hidden-xs">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h2>
                 <div class="buttons-holder mt-30">
@@ -243,7 +263,7 @@ padding-top: 20px;
         <section class="hero-wrap" style="background-image: url(img/welcome_3.jpg)">
           <div class="container container-full-height">
             <div class="hero-holder">
-              <div class="hero-message">
+              <div class="hero-message small-align">
                 <h1>EXPERTS IN RECRUITMENT</h1>
                 <h2 class="hero-subtitle hidden-xs">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</h2>
                 <div class="buttons-holder mt-30">
@@ -302,7 +322,7 @@ padding-top: 20px;
       </section>
     </div>
 
-    <div class="item">
+    <div class="item ">
       <section class="hero-wrap" style="background-image: url(img/slide_pro_bg_text.png)">
         <div class="container container-full-height">
           <div class="hero-holder">
@@ -332,11 +352,8 @@ padding-top: 20px;
           <div class="hero-holder">
             <div class="hero-message">
               <h1>BUYING IS THE NEW PROCUREMENT</h1>
-              <p class="hero-subtitle hidden-xs services-text">For any business that depends heavily / relies on their supply chain, the relationships and contact terms, here at RSC we have a proven track record of repositioning businesses to more favourable terms and to usher in a new era of collaboration between yourselves and your supply chain. Please see the things we cover when we start talking to your suppliers. Once we have completed our work we hope you will</p>
-              <div class="buttons-holder mt-30">
-                <a href="#" class="btn btn-lg btn-transparent">Learn More</a>
-
-              </div>
+              <p class="hero-subtitle  services-text">For any business that depends heavily / relies on their supply chain, the relationships and contact terms, here at RSC we have a proven track record of repositioning businesses to more favourable terms and to usher in a new era of collaboration between yourselves and your supply chain. Please see the things we cover when we start talking to your suppliers. Once we have completed our work we hope you will</p>
+            
             </div>
           </div>
         </div>
@@ -593,7 +610,7 @@ padding-top: 20px;
             <div class="hero-message">
               <h1>PROFFESIONAL BACKGROUND</h1>
      
-                <ul style="font-size: 20px; font-family: ;">
+                <ul>
                 <li>10 years commercial consultant to Eutelsat(Paris and Turun)</li>
                  <li>Re-seller recruitment</li>
                 <li>Lobbying EU / UK government to securefunds for remote broadband schemes marketing</li>
@@ -618,7 +635,7 @@ padding-top: 20px;
             <div class="hero-message">
               <h1>EMPLOYMENT ROLES</h1>
 
-              <ul style="font-size: 20px; font-family: ;">
+              <ul >
                 <li>3 years commercial consultant / recruitment thelaw society of England and wales</li>
                  <li>Direct selling corporate memberships forpartner portal</li>
                 <li>Sales training and advice</li>
