--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>RSC| Home RSC</title>
-
+  <script type="text/javascript" charset="UTF-8" src="js/cookie.js"></script>
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="css/animate.css" />
   <link rel="stylesheet" href="css/color.css" />
   <link rel="stylesheet" href="css/custom.css" />
+ 
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
@@ -45,9 +46,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="js/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="img/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
 
@@ -56,9 +57,7 @@
 
 
 <body data-spy="scroll" data-offset="60" data-target=".navbar-fixed-top">
-<style>
 
-</style>
 
   <!-- Preloader -->
   <div class="loader-mask">
@@ -151,7 +150,7 @@
                 <h2 class="hero-subtitle hidden-xs">RCS have all the tools you need to enable a fast and direct platform to better build your business.
 </h2>
                 <div class="buttons-holder mt-30">
-                  <a href="#" class="btn btn-lg btn-transparent">Learn More</a>
+                  <a href="#services" class="btn btn-lg btn-transparent">Learn More</a>
                   
                 </div>
               </div>
@@ -168,7 +167,7 @@
                 <h1>EXPERTS IN BUSINESS</h1>
                 <h2 class="hero-subtitle hidden-xs">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h2>
                 <div class="buttons-holder mt-30">
-                  <a href="#" class="btn btn-lg btn-transparent">Learn More</a>
+                  <a href="#services" class="btn btn-lg btn-transparent">Learn More</a>
                  
                 </div>
               </div>
@@ -185,7 +184,7 @@
                 <h1>EXPERTS IN RECRUITMENT</h1>
                 <h2 class="hero-subtitle hidden-xs">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</h2>
                 <div class="buttons-holder mt-30">
-                  <a href="#" class="btn btn-lg btn-transparent">Learn More</a>
+                  <a href="#services" class="btn btn-lg btn-transparent">Learn More</a>
 
                 </div>
               </div>
@@ -724,10 +723,7 @@
   <!-- jQuery Scripts -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- 
-    1. Generate your key here - https://developers.google.com/maps/documentation/javascript/get-api-key
-    2. Paste your key in the script below.
-  -->
+ 
   
  
   <script type="text/javascript" src="js/plugins.js"></script>
@@ -739,8 +735,8 @@
 <script type="text/javascript" src="revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
 <script type="text/javascript" src="revolution/js/extensions/revolution.extension.navigation.min.js"></script>
 <script type="text/javascript" src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-  <!-- Google Map -->
-  
+
+
 
 </body>
 </html>
