changed audit title

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <section class="hero-wrap owl-carousel owl-theme bg-dark text-center" id="owl-slider-two-img">
     <div class="item">
-      <h2 class="sh">AUDIT</h2>
+      <h2 class="sh">SALES AUDIT</h2>
       <section class="hero-wrap">
         <section class="hero-wrap" style="background-image: url(img/background.jpg)">
         <div class="container container-full-height">
@@ -466,7 +466,7 @@
 
   <section class="hero-wrap owl-carousel owl-theme bg-dark text-center" id="owl-slider-three-img">
     <div class="item">
-      <h2 class="sh">DANI?</h2>
+      <h2 class="sh">Experience</h2>
       <section class="hero-wrap" style="background-image: url(img/background.jpg)">
         <div class="container container-full-height">
           <img src="img/ianmartin_infographic.png" alt="ian martin info graphic"/>
