added changes to accordian and fixed a slider height

--- a/index.html
+++ b/index.html
@@ -604,20 +604,23 @@
     <div class="row heading">
       <div class="col-md-6 col-md-offset-3">
         <h2 class="text-center bottom-line">Our Clients</h2>
-        <p class="text-center">At RSC we believe in client confidentiality so we do not publish details of former or current clients but can provide extensive commercial references on request. Please call Ian Martin on 07962 277180.</p>
+        <p class="text-center" style="padding:5px;">At RSC we believe in client confidentiality so we do not publish details of former or current clients but can provide extensive commercial references on request. Please call Ian Martin on 07962 277180.</p>
       </div>
     </div>
 
-    <div class="row" >
-      <div class="col-sm-4 client-logo " style="background-color:white;">
-        <img src="img/rcapital_logo.jpg" alt="rcapital logo">
+    <div class="row logo-pad" >
+      <div class="col-sm-12 client-logo " style="background-color:white; ">
+        <img src="img/rcapital_logo.jpg" alt="rcapital logo" class="logo_image"  />
+        <img src="img/chs_logo.jpg" alt=" chs logo" class="logo_image" >
+        <img src="img/bowmark_logo.jpg" alt="bowmark logo" class="logo_image" >
       </div>
-      <div class="col-sm-4 client-logo" style="background-color:white;">
-        <img src="img/chs_logo.jpg" alt=" chs logo">
+      <!-- <div class="col-sm-4 client-logo" style="background-color:white;  ">
+       
       </div>
-      <div class="col-sm-4 client-logo" style="background-color:white;">
-        <img src="img/bowmark_logo.jpg" alt="bowmark logo">
-      </div>
+      <div class="col-sm-4 client-logo" style="background-color:white; ">
+
+      </div> -->
+    </div>
     <!-- </div> -->
 
 </section> <!-- end clients -->
