--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
 			emailjs.init("user_0lBHAUSVc18wA9j4fk6kg");
 		})();
 	</script>
+  <script>
+   if (window.location.protocol == 'http:'){
+	
+	console.log("you are accessing us via "
+		+ "an insecure protocol (HTTP). "
+		+ "Redirecting you to HTTPS.");
+		
+	window.location.href =
+		window.location.href.replace(
+				'http:', 'https:');
+}
+
+
+
+  </script>
 
 </head>
 
