changed loading dots

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <!-- Preloader -->
   <div class="loader-mask">
     <div class="loader">
-      "Loading..."
+      "Loading....."
     </div>
   </div>
 
