fixed style issues

--- a/index.html
+++ b/index.html
@@ -334,33 +334,33 @@
 	<!-- Indicators -->
   <ol class="carousel-indicators">
     <!-- 1st Indicator -->
-    <li class="active" style="  background-color: rgba(29, 54, 82, 0.9)!important;">
+    <li class="active" style="  background-color: rgba(29, 54, 82, 0.9)!important;" onclick="location.href='#audit'">
       <!-- 1st Indicator Image -->
       <img src="img/audit_infographic_tn.png" alt="in_th_026_01_sm" />
       <!-- 1st Indicator Text -->
       <div>
-        <h5>RSC SALES AUDIT</h5>
-        <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p>
+        <h5 class="indicator-heading">RSC SALES AUDIT</h5>
+        <!-- <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p> -->
       </div>
     </li>
     <!-- 2nd Indicator -->
-    <li>
+    <li onclick="location.href='#procurement'">
       <!-- 2nd Indicator Image -->
       <img src="img/procurement_infographic_tn.png" alt="in_th_026_02_sm" />
       <!-- 2nd Indicator Text -->
       <div>
-        <h5>BUYING IS THE NEW SELLING</h5>
-        <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p>
+        <h5 class="indicator-heading">BUYING IS THE NEW SELLING</h5>
+        <!-- <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p> -->
       </div>
     </li>
     <!-- 3rd Indicator -->
-    <li style="  background-color: rgba(127, 186, 198, 0.9)!important;">
+    <li style="  background-color: rgba(127, 186, 198, 0.9)!important;" onclick="location.href='#recruitment'">
       <!-- 3rd Indicator Image -->
       <img src="img/recrutment_infographic_tn.png" alt="in_th_026_03_sm" />
       <!-- 3rd Indicator Text -->
       <div>
-        <h5>RSC RECRUITMENT</h5>
-        <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p>
+        <h5 class="indicator-heading">RSC RECRUITMENT</h5>
+        <!-- <p>In in velit quis arcu ornare laoreet urabitur adipiscing luctus massa nteger ut purus ac augue commodo ornare.</p> -->
       </div>
     </li>
   </ol> <!-- /Indicators -->
