added mini graphics in services

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
       </div>
         <div class="row">
           <div class="col-sm-2"><a href="#procurement"><img src="img/procurement_infographic_tn.png" alt="in_th_026_02_sm" /></a></div>
+          <div class="col-sm-2"><a href="#procurement-text"><img src="img/procurement-text-tn.png" alt="in_th_026_02_sm" /></a></div>
           <div class="col-sm-2"><a href="#recruitment"><img src="img/recrutment_infographic_tn.png" alt="in_th_026_02_sm" /></a></div>
-
 
         </div>
       </div>
